--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,153 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.header {
+
+display: flex;
+flex-direction: row;
+padding: 10px;
+height: auto;
+border-bottom-width: 2px;
+/* border-width: 5px; */
+/* border-color: black; */
+/* justify-content: center; */
+/* align-items: center; */
+/* text-align: center; */
+
+  
+}
+
+.headerLogo {
+/* padding: 5px; */
+/* border-bottom-width: 1px; */
+/* border-width: 5px;
+border-color: black; */
+/* margin-bottom: 10px; */
+}
+
+.headerRight {
+  margin-top: 16px;
+  padding: 5px;
+  position: absolute;
+  right: 0;
+  padding: 5px;
+  display: flex;
+flex-direction: row;
+align-content: center;
+/* justify-content: center; */
+/* text-align: center; */
+
+
+}
+
+.boldHeaderText{
+  font-size: medium;
+  font-weight:600;
+  margin-left: 24px;
+  margin-right: 24px;
+  font-family: Arial, Helvetica, sans-serif;
+  align-content: center;
+justify-content: center;
+margin-top: 5px;
+}
+
+.solidButton {
+  width: 200px;
+  background-color: #01A2E8;
+  color: white ;
+  border-radius: 3px;
+font-family: Arial, Helvetica, sans-serif;
+font-weight: 600;
+height: 32px;
+
+}
+
+.solidButtonHeader {
+  width: 200px;
+  background-color: #01A2E8;
+  color: white ;
+  border-radius: 3px;
+font-family: Arial, Helvetica, sans-serif;
+font-weight: 600;
+height: 32px;
+margin-right: 16px;
+margin-left: 10px;
+align-content: center;
+justify-content: center;
+}
+
+.landingCard {
+  width: 40%;
+  /* align-content: center;
+  justify-content: center; */
+  background-color: white;
+  border-width: 1px;
+  border-color: red;
+  height: 20%;
+  position: relative;
+  
+  /* Peter Mortensen & Jeremiah https://stackoverflow.com/questions/15376634/how-can-i-center-a-div-within-another-div */
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+}
+.landingCard2 {
+  /* width: 400px;
+    height: 40%; */
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    
+    margin-top: 120px;
+    margin-left: -160px;
+    flex-direction: row;
+    /* align-content: center;
+    justify-content: center */
+    ;
+}
+.landingInput {
+  height: 48px;
+  width: 400px;
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin-top: 126px;
+  margin-left: -100px;
+  padding:5px;
+  border-radius: 3px;
+  /* position:absolute; */
+}
+.searchButton{
+  height: 48px;
+  width: 180px;
+  background-color: #01A2E8;
+  margin-bottom: 60px;
+  margin-left: 12px;
+  border-radius: 2px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  font-weight: 500;
+  font-size: 18px;
+}
+.landingText{
+  margin-left: 24px;
+  font-size:80px;
+  color: white;
+  font-weight: 800;
+  text-align: center;
+  position: absolute;
+  margin-top: 420px;
+  margin-left: 620px;
+
+}
+
+.str-chat__channel-list-messenger-react__main {
+  height: 50vh;
+  max-height: 45%;
+  width: 460px;
 }
